# $IdPath$

noinst_LIBRARIES=libcheck.a

libcheck_a_SOURCES = \
	check.c		\
	check_run.c	\
	check.h		\
	check_impl.h	\
	check_msg.c	\
	check_msg.h	\
	check_log.c	\
	check_log.h	\
	check_print.c	\
	check_print.h	\
	error.c		\
	error.h		\
	list.c		\
	list.h

CFLAGS = @ANSI_CFLAGS@

EXTRA_DIST = \
	NEWS	\
	README
